Javascript fixes for load issues and clicking slider on mobile

--- a/sass/objects/_slider.scss
+++ b/sass/objects/_slider.scss
@@ -14,7 +14,8 @@
     position: relative;
     color: $white;
 
-    margin: 180px 0px 600px 1rem;
+    margin: 180px 0px 0px 1rem;
+    padding-bottom: 600px;
     //width: 300px;
 
     font-family: 'Lato', 'Muli', Trebuchet, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -144,6 +145,8 @@
       //padding-left: 120px;
     }
   }
+
+  
   
   .slider__button {
     z-index: 9;
